--- a/public/css/M_Rare.css
+++ b/public/css/M_Rare.css
@@ -30,7 +30,7 @@
 }
 .carousel-caption{
     bottom: 220px;
-  
+
 }
 .carousel-caption h5{
     font-size: 45px;
@@ -56,7 +56,7 @@
     padding: 10px 30px;
     display: inline-block;
     margin-top: 15px;
-    
+
     display: inline-block;
     font-size: 14px;
     font-weight: 500;
@@ -155,7 +155,7 @@ color: #60a3bc;
     }
     #navbarSupportedContent > ul > li:nth-child(n) > a{
         padding: 10px 0;
-    }  
+    }
 }
 /*btn search*/
 .search-box{
@@ -242,9 +242,9 @@ button:focus {
 
 /*about*/
 #about{
-    background-image: url(image/txt.png);
+    background-image: url(/image/txt.png);
     align-items: center;
-  
+
 }
 #about .title h1{
     color: #fff;
@@ -280,7 +280,7 @@ footer li a:hover{
     margin: 0;
     padding: 0;
     height: 100%;
-    
+
 }
 .user_card {
     height: 450px;
@@ -303,7 +303,7 @@ footer li a:hover{
     width: 170px;
     top: -75px;
     border-radius: 50%;
-    
+
     padding: 10px;
     text-align: center;
 }
@@ -372,9 +372,9 @@ footer li a:hover{
     color: white;
     transition: 0.3s all;
 }
-#buy-card:hover a{ 
+#buy-card:hover a{
     transform: translateY(0px);
-    opacity: 1;  
+    opacity: 1;
 }
 #buy-card h5{
     color: black;
@@ -384,11 +384,11 @@ footer li a:hover{
   #details {
     font-family: 'open sans';
    /* overflow-x: hidden; */}
-  
+
   #d-img {
-    max-width: 100%; 
-max-height: 100%;}
-  
+    max-width: 350px;
+    max-height: 300px;}
+
   .preview {
     display: -webkit-box;
     display: -webkit-flex;
@@ -402,13 +402,13 @@ max-height: 100%;}
     @media screen and (max-width: 996px) {
       .preview {
         margin-bottom: 20px; } }
-  
+
   .preview-pic {
     -webkit-box-flex: 1;
     -webkit-flex-grow: 1;
         -ms-flex-positive: 1;
             flex-grow: 1; }
-  
+
   .preview-thumbnail.nav-tabs {
     border: none;
     margin-top: 15px; }
@@ -423,7 +423,7 @@ max-height: 100%;}
         margin: 0; }
       .preview-thumbnail.nav-tabs li:last-of-type {
         margin-right: 0; }
-  
+
   .tab-content {
     overflow: hidden; }
     .tab-content img {
@@ -432,7 +432,7 @@ max-height: 100%;}
               animation-name: opacity;
       -webkit-animation-duration: .3s;
               animation-duration: .3s; }
-  
+
   #d-card{
     margin-top: 5px;
     margin-left: 20px;
@@ -440,15 +440,15 @@ max-height: 100%;}
     background: #eee;
     padding: 3em;
     line-height: 1.5em; }
-  
+
   @media screen and (min-width: 997px) {
     .wrapper {
       display: -webkit-box;
       display: -webkit-flex;
       display: -ms-flexbox;
       display: flex; } }
-  
-  /*.details {
+
+   /*.details {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -458,26 +458,26 @@ max-height: 100%;}
     -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column; }*/
-  
-  
-  
+
+
+
   .product-title, .price {
     text-transform: UPPERCASE;
     font-weight: bold; }
-  
-  .checked, .price span {
+
+  .checked, .price  span {
     color: #ff9f1a; }
-  
-  .product-title, .rating, .product-description, .price {
+
+  .product-title,  .product-description, .price {
     margin-bottom: 15px; }
-  
+
   .product-title {
     color: #60a3bc;
     margin-top: 0; }
-  
-  
- 
-  
+
+
+
+
   .add-to-cart {
     background: #60a3bc;
     height: 40px;
@@ -493,7 +493,7 @@ max-height: 100%;}
         transform: translateY(25px);
         border: none;
         color: white;
-        transition: 0.3s all; 
+        transition: 0.3s all;
      }
     .add-to-cart:hover {
       background: #666666;
@@ -520,10 +520,44 @@ max-height: 100%;}
 .modal-backdrop {
     z-index:0
 }
+/*panier*/
+.table>tbody>tr>td, .table>tfoot>tr>td{
+    vertical-align: middle;
+}
+@media screen and (max-width: 600px) {
+    table#cart tbody td .form-control{
+		width:20%;
+		display: inline !important;
+	}
+	.actions .btn{
+		width:36%;
+		margin:1.5em 0;
+	}
+
+	.actions .btn-info{
+		float:left;
+	}
+	.actions .btn-danger{
+		float:right;
+	}
+
+	table#cart thead { display: none; }
+	table#cart tbody td { display: block; padding: .6rem; min-width:320px;}
+	table#cart tbody tr td:first-child { background: #333; color: #fff; }
+	table#cart tbody td:before {
+		content: attr(data-th); font-weight: bold;
+		display: inline-block; width: 8rem;
+	}
 
 
 
-  
+	table#cart tfoot td{display:block; }
+	table#cart tfoot td .btn{display:block;}
+
+}
 
 
- 
+
+
+
+
