--- a/public/css/M_Rare.css
+++ b/public/css/M_Rare.css
@@ -165,11 +165,11 @@ color: #60a3bc;
     border-radius: 40px;
     padding: 10px;
 }
-.search-box:hover > .search-btn{
+.search-box:hover > #btn_search{
    background: white;
    color: #60a3bc;
 }
-.search-btn{
+#btn_search{
     color: #60a3bc;
     float: right;
     width: 40px;
@@ -177,6 +177,7 @@ color: #60a3bc;
     border-radius: 50%;
     background:  #666666;
     display: flex;
+    border: none;
     justify-content: center;
     align-items: center;
 }
