--- a/public/css/M_Rare.css
+++ b/public/css/M_Rare.css
@@ -45,15 +45,16 @@
     font-size: 18px;
     line-height: 1.9;
 }
-#txt{
+/* #txt{
     background-image:url(/image/txt.png);
      color: white;
      padding: 10px;
-}
+
+} */
 .carousel-caption a{
     text-transform: uppercase;
     text-decoration: none;
-   background-image: linear-gradient(to left ,#666666 ,#60a3bc, white);
+   background-image: linear-gradient(to left ,#666666 ,#ff6633, white);
     padding: 10px 30px;
     display: inline-block;
     margin-top: 15px;
